--- a/render.yaml
+++ b/render.yaml
@@ -10,13 +10,9 @@
 services:
   - type: web
     plan: free
-    # This is the runtime for services that pull a prebuilt Docker image
-    runtime: image
-    # You can give the service any name
+    runtime: docker
     name: n8n-service
-    image:
-      # Pulls the n8n image tagged as latest from Docker Hub
-      url: docker.io/n8nio/n8n:latest
+    dockerfilePath: ./Dockerfile
 
     # All environment variables defined below are required!
     #
